@@ -1,5 +1,5 @@
 # pylint: disable=unused-import,multiple-imports,no-self-use,missing-docstring,invalid-name,too-few-public-methods
-
+# pylint: disable=comparison-of-constants
 import abc
 
 if 4 == 5:
