@@ -2,11 +2,17 @@ comparison-with-itself:6:7:6:17:foo:Redundant comparison - arg == arg:UNDEFINED
 comparison-with-itself:8:9:8:19:foo:Redundant comparison - arg != arg:UNDEFINED
 comparison-with-itself:10:9:10:18:foo:Redundant comparison - arg > arg:UNDEFINED
 comparison-with-itself:12:9:12:19:foo:Redundant comparison - arg <= arg:UNDEFINED
+comparison-of-constants:14:9:14:21:foo:"Comparison between constants: 'None == None' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:14:9:14:21:foo:Redundant comparison - None == None:UNDEFINED
+comparison-of-constants:16:9:16:19:foo:"Comparison between constants: '786 == 786' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:16:9:16:19:foo:Redundant comparison - 786 == 786:UNDEFINED
+comparison-of-constants:18:9:18:19:foo:"Comparison between constants: '786 is 786' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:18:9:18:19:foo:Redundant comparison - 786 is 786:UNDEFINED
+comparison-of-constants:20:9:20:23:foo:"Comparison between constants: '786 is not 786' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:20:9:20:23:foo:Redundant comparison - 786 is not 786:UNDEFINED
 comparison-with-itself:22:9:22:19:foo:Redundant comparison - arg is arg:UNDEFINED
 comparison-with-itself:24:9:24:23:foo:Redundant comparison - arg is not arg:UNDEFINED
+comparison-of-constants:26:9:26:21:foo:"Comparison between constants: 'True is True' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:26:9:26:21:foo:Redundant comparison - True is True:UNDEFINED
+comparison-of-constants:28:9:28:19:foo:"Comparison between constants: '666 == 786' is also a constant, remove the comparison and consider a refactor":HIGH
 comparison-with-itself:36:18:36:28:bar:Redundant comparison - arg != arg:UNDEFINED
