@@ -1,5 +1,5 @@
 # pylint: disable=missing-docstring, invalid-name
-# pylint: disable=literal-comparison,comparison-with-itself, import-error
+# pylint: disable=literal-comparison,comparison-with-itself, import-error, comparison-of-constants
 """Test detection of NaN value comparison."""
 import numpy
 
