@@ -9,6 +9,10 @@ Release date: TBA
 ..
   Put new features here and also in 'doc/whatsnew/2.14.rst'
 
+* Added new checker ``comparison-of-constants``
+
+  Closes #6076
+
 * Improved wording of the message of ``deprecated-module``
 
   Closes #6169
